tests/sema/fail/v29_fail_extern_struct_bool_field.ep
# COMPILE_FAIL_CONTAINS: extern UseBad parameter value struct BadWinStruct field enabled has unsupported FFI type bool

type BadWinStruct {
    enabled: bool
}

extern "demo.dll" fun UseBad(value: BadWinStruct): void

fun main(): void {}
